--- a/res/master.css
+++ b/res/master.css
@@ -38,7 +38,6 @@ html, body {
   float: right;
   margin-right: -15px;
   margin-left: 15px;
-  margin-top: 15px;
   width: 50px;
   height: 50px;
   display: block;
@@ -50,7 +49,6 @@ html, body {
   float: left;
   margin-left: -15px;
   margin-right: 15px;
-  margin-top: 15px;
 }
 
 .node .inputs .input {
@@ -84,4 +82,11 @@ html, body {
   font-size: 11px;
   font-family: monospace;
   color: #555;
+}
+
+.jscolor {
+  border: 1px solid #ccc;
+  padding: 15px;
+  height : 20px;
+  display: inline-block;
 }
