--- a/res/master.css
+++ b/res/master.css
@@ -90,3 +90,22 @@ html, body {
   height : 20px;
   display: inline-block;
 }
+
+.add-new-button {
+  font-size: 40px;
+  position: fixed;
+  right: 15px;
+  top: 15px;
+  border: 1px solid #ccc;
+  background: white;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  cursor: pointer;
+  color: #555;
+}
+
+.add-new-button:hover {
+  color: #000;
+}
