--- a/res/master.css
+++ b/res/master.css
@@ -8,6 +8,11 @@ html, body {
   font-family: Arial;
 }
 
+#editor {
+  position: absolute;
+  z-index: 10;
+}
+
 .node {
   border: 1px solid #ccc;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
@@ -95,6 +100,7 @@ input {
   position: fixed;
   right: 10px;
   top: 15px;
+  z-index: 999999;
 }
 
 .ui-button {
@@ -119,4 +125,12 @@ input {
 
 .ui-button:hover {
   color: #000;
+}
+
+canvas.connecting-lines {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
