Change node positioning strategy
This strategy plays better with scroll bars for an infinite work space.

--- a/res/master.css
+++ b/res/master.css
@@ -21,6 +21,8 @@ html, body {
   padding: 15px;
   display: inline-block;
   margin: 15px;
+  position: absolute;
+  width: 230px;
 }
 
 .node.selected .title {
