Add a gradient widget
The gradient widget library does not handle resizing well, so the
GradientNode is fixed at a larger min-width.

--- a/res/master.css
+++ b/res/master.css
@@ -47,8 +47,13 @@ html, body {
   padding: 15px 15px 10px;
 }
 
-.node canvas {
+.node > canvas {
   width: calc(100% - 102px);
+}
+
+.node .gradient-widget-wrapper {
+  width: 500px;
+  height: 35px;
 }
 
 .node .output {
